gcc/testsuite/rust/rustc/ui/issues/issue-5883_dg.rs
trait A {}

struct Struct {
    r: dyn A + 'static
}

fn new_struct(
    r: dyn A + 'static // { dg-error ".E0277." "" { target *-*-* } }
) -> Struct {
    Struct { r: r }
}

fn main() {}

